--- a/app/src/main/res/layout/fragment_paid_list.xml
+++ b/app/src/main/res/layout/fragment_paid_list.xml
@@ -20,6 +20,46 @@
             android:padding="@dimen/space_min"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:padding="@dimen/space_min"
+                app:prefixText="@string/period"
+                android:layout_weight="1"
+                android:background="@color/green_light_trans"
+                android:layout_height="wrap_content">
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:id="@+id/tv_period_pdl"
+                    android:text="@string/date_hint"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/space_min"
+                app:prefixText="@string/value"
+                android:padding="@dimen/space_min"
+                android:layout_weight="1"
+                android:background="@color/green_light_trans"
+                android:layout_height="wrap_content">
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:id="@+id/tv_value_pdl"
+                    android:text="@string/money_hint"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
