--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -7,7 +7,7 @@
     >
     <item
         android:id="@+id/item_menu_setting_credit_card"
-        android:icon="@drawable/ic_credit_card_foreground"
+        android:icon="@drawable/add_card"
         android:iconTint="@color/green_background"
         android:title="@string/credit_cards"
         android:titleCondensed="@string/credit_card"
@@ -18,6 +18,13 @@
         android:icon="@android:drawable/sym_contact_card"
         android:iconTint="@color/green_background"
         android:title="@string/taxes_credit_card"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/item_menu_setting_account"
+        android:icon="@drawable/add_account"
+        android:iconTint="@color/green_background"
+        android:title="@string/account"
         app:showAsAction="ifRoom" />
 
     <item
