--- a/app/src/main/res/layout/fragment_account_item_list.xml
+++ b/app/src/main/res/layout/fragment_account_item_list.xml
@@ -24,14 +24,21 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:hint="@string/name"
-                android:id="@+id/name_acil"
+                android:id="@+id/name_accil"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
-            android:id="@+id/btn_delete_acil"
+            android:id="@+id/btn_search_accil"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+        <ImageView
+            android:id="@+id/btn_delete_accil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
