--- a/app/src/main/res/layout/fragment_input_list.xml
+++ b/app/src/main/res/layout/fragment_input_list.xml
@@ -22,6 +22,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rv_input_list"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btn_add_il"
+                android:layout_margin="@dimen/space_min"
+                app:icon="@android:drawable/ic_menu_add"
+                android:text="@string/add"/>
         </LinearLayout>
 
     </ScrollView>
