--- a/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
+++ b/app/src/main/res/layout-sw720dp/quote_credit_variable.xml
@@ -75,6 +75,23 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_min"
+            android:layout_weight="1"
+            android:hint="@string/kind_of_tax"
+            app:endIconMode="clear_text">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_kind_of_tax_qcv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:textAlignment="textEnd" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/space_min"
             app:endIconMode="clear_text"
