--- a/app/src/main/res/layout-land/quote_credit.xml
+++ b/app/src/main/res/layout-land/quote_credit.xml
@@ -39,7 +39,7 @@
             android:layout_margin="@dimen/space_min"
             app:endIconMode="clear_text"
             app:prefixText="$"
-            android:layout_weight="1">
+            android:layout_weight="2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNameItem"
@@ -70,6 +70,22 @@
             android:textAlignment="textEnd" />
 
         </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_margin="@dimen/space_min"
+                    android:layout_weight="2"
+                    app:endIconMode="clear_text">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etKindOfTax"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:hint="@string/kind_of_tax"
+                        android:textAlignment="textEnd"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_height="match_parent"
