--- a/app/src/main/res/layout-land/quote_credit_variable.xml
+++ b/app/src/main/res/layout-land/quote_credit_variable.xml
@@ -56,7 +56,7 @@
             android:hint="@string/tax"
             app:endIconMode="clear_text"
             app:suffixText="%"
-            android:layout_weight="2">
+            android:layout_weight="1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTax"
@@ -66,7 +66,24 @@
             android:inputType="numberDecimal"
             android:textAlignment="textEnd" />
 
-        </com.google.android.material.textfield.TextInputLayout>>
+        </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:hint="@string/kind_of_tax"
+                app:endIconMode="clear_text">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_kind_of_tax_qcv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:textAlignment="textEnd" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -74,7 +91,7 @@
             android:layout_height="match_parent"
             app:endIconMode="clear_text"
             android:hint="@string/months"
-            android:layout_weight="2">
+            android:layout_weight="1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMonths"
