--- a/app/src/main/res/layout/fragment_period_credit_item_list.xml
+++ b/app/src/main/res/layout/fragment_period_credit_item_list.xml
@@ -7,19 +7,23 @@
     app:strokeWidth="@dimen/stroke_with"
     android:layout_margin="@dimen/space_min"
     android:padding="@dimen/space_min"
+
     app:cardElevation="@dimen/card_elevator">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/green_background"
         android:orientation="horizontal">
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:background="@color/green_light_trans"
+            android:layout_height="match_parent"
             android:layout_margin="@dimen/space_min"
-            android:padding="@dimen/space_min"
             android:layout_weight="1"
-            app:prefixText="@string/date_bill"
-            android:layout_height="match_parent">
+            android:background="@color/green_light_trans"
+            android:padding="@dimen/space_min"
+            android:textColorHint="@color/text_to_green_background"
+            app:prefixText="@string/date_bill">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/month_year_pcil"
