--- a/app/src/main/res/layout/fragment_taxes.xml
+++ b/app/src/main/res/layout/fragment_taxes.xml
@@ -88,10 +88,16 @@
                         android:textAlignment="textEnd" />
                     </com.google.android.material.textfield.TextInputLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/space_min"
+                        android:layout_weight="1"
                         app:endIconMode="clear_text"
                         app:suffixText="%"
                         android:hint="@string/tax">
@@ -105,6 +111,22 @@
                         android:textAlignment="textEnd" />
                         </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="2"
+                app:endIconMode="clear_text">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_kind_of_tax_txs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:hint="@string/kind_of_tax"
+                    android:textAlignment="textEnd"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/llPeriodsTaxes"
                         android:layout_width="match_parent"
