--- a/app/src/main/res/layout/quote_credit.xml
+++ b/app/src/main/res/layout/quote_credit.xml
@@ -57,11 +57,13 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:layout_editor_absoluteX="1dp">
 
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_margin="@dimen/space_min"
             app:suffixText="%"
+            android:layout_weight="1"
             app:endIconMode="clear_text">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTax"
@@ -72,6 +74,23 @@
             android:inputType="numberDecimal"
             android:textAlignment="textEnd"
             />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/space_min"
+            app:suffixText="%"
+            android:layout_weight="2"
+            app:endIconMode="clear_text">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etKindOfTax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:hint="@string/kind_of_tax"
+                android:textAlignment="textEnd"
+                />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
