--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_to_green_background">#FFFFFFFF</color>
     <color name="green_background">#5DBC61</color>
     <color name="green_background_dark">#447046</color>
     <color name="green_light_trans">#1DD0EFC2</color>
