--- a/app/src/main/res/menu-v26/setting_menu.xml
+++ b/app/src/main/res/menu-v26/setting_menu.xml
@@ -7,7 +7,7 @@
     >
     <item
         android:id="@+id/item_menu_setting_credit_card"
-        android:icon="@drawable/add_card"
+        android:icon="@drawable/ic_credit_card_foreground"
         android:iconTint="@color/green_background"
         android:title="@string/credit_cards"
         android:titleCondensed="@string/credit_card"
@@ -22,7 +22,7 @@
 
     <item
         android:id="@+id/item_menu_setting_account"
-        android:icon="@drawable/add_account"
+        android:icon="@drawable/ic_credit_card_foreground"
         android:iconTint="@color/green_background"
         android:title="@string/account"
         app:showAsAction="ifRoom" />
