--- a/app/src/main/res/layout-sw720dp/fragment_list_bought.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_list_bought.xml
@@ -122,7 +122,7 @@
                     android:layout_margin="@dimen/space_min"
                     android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/interest_value_short" >
+                    app:prefixText="@string/interest_value_short" >
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvInterestList"
