--- a/app/src/main/res/layout/fragment_account_item_list.xml
+++ b/app/src/main/res/layout/fragment_account_item_list.xml
@@ -6,6 +6,7 @@
     app:cardCornerRadius="@dimen/radius_corner"
     app:cardElevation="@dimen/card_elevator"
     android:orientation="vertical"
+    android:layout_margin="@dimen/space_min"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
