--- a/app/src/main/res/layout/fragment_additional_credit_item_list.xml
+++ b/app/src/main/res/layout/fragment_additional_credit_item_list.xml
@@ -10,7 +10,8 @@
     android:padding="@dimen/space_min">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/green_background">
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             app:prefixText="@string/name"
