--- a/app/src/main/res/layout/fragment_list_credit_card_setting.xml
+++ b/app/src/main/res/layout/fragment_list_credit_card_setting.xml
@@ -43,7 +43,7 @@
             android:layout_margin="@dimen/space_min"
             app:icon="@android:drawable/ic_menu_save"
             android:layout_weight="1"
-            android:text="@string/add_credit_card" />
+            android:text="@string/add_credit_card_setting" />
 
 
     </LinearLayout>
