--- a/app/src/main/res/layout/fragment_monthly_credit_item_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_item_list.xml
@@ -5,12 +5,13 @@
     app:strokeWidth="@dimen/stroke_with"
     app:cardCornerRadius="@dimen/radius_corner"
     app:cardElevation="@dimen/card_elevator"
+    android:layout_margin="@dimen/space_min"
     android:orientation="vertical"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/green_background"
         android:orientation="horizontal">
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
