--- a/app/src/main/res/layout/fragment_monthly_credit_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_list.xml
@@ -17,6 +17,60 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/space_min"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/num_credits">
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_num_credits_mcl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/months_number_hint"
+                    android:textAlignment="center"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/total_debt">
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_tot_debt_mcl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/money_hint"
+                    android:textAlignment="center"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/total_quote">
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_tot_quote_mcl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/money_hint"
+                    android:textAlignment="center"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_list_mcl"
             android:layout_width="match_parent"
