fix issue frond end
fix issue with how it show month in buy with credit card

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/buys_credit_card.xml
+++ b/app/src/main/res/layout-land/buys_credit_card.xml
@@ -150,7 +150,7 @@
             android:layout_weight="1"
             android:hint="@string/months"
             android:inputType="numberSigned"
-            android:textAlignment="textEnd" />
+            android:textAlignment="center" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
