--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/btn_input_list_acc"/>
                 <com.google.android.material.button.MaterialButton
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="@dimen/space_min"
                     android:layout_weight="1"
                     android:text="@string/save"
