added resumen card
added new card recap to get all information about the spend values

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/menu/first_menu.xml
+++ b/app/src/main/res/menu/first_menu.xml
@@ -6,6 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
+        android:id="@+id/item_menu_side_recap"
+        android:icon="@android:drawable/ic_menu_view"
+        android:titleCondensed="@string/recap"
+        android:title="@string/recap" />
+    <item
         android:id="@+id/item_menu_side_quoteCredit"
         android:icon="@drawable/ic_baseline_permanent"
         android:titleCondensed="@string/quote_credit"
