--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -17,6 +17,29 @@
             android:padding="@dimen/space_min"
             android:orientation="vertical">
 
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/space_min"
+                app:cardCornerRadius="@dimen/radius_corner"
+                app:cardElevation="@dimen/card_elevator"
+                app:strokeWidth="@dimen/stroke_with"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/space_min"
+                    android:padding="2dp"
+                    android:orientation="vertical"
+                    >
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/recap"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/space_min"
+                    android:orientation="vertical">
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:background="@color/green_light_trans"
@@ -32,14 +55,59 @@
                     android:textAlignment="textEnd"/>
             </com.google.android.material.textfield.TextInputLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/green_light_trans"
+                    android:layout_margin="@dimen/space_min"
+                    android:padding="@dimen/space_min"
+                    android:layout_weight="1"
+                    app:prefixText="@string/total_paids">
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_total_paids_rec"
+                        android:textAlignment="textEnd"
+                        android:hint="@string/money_hint"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/green_light_trans"
+                    android:layout_margin="@dimen/space_min"
+                    android:padding="@dimen/space_min"
+                    android:layout_weight="1"
+                    app:prefixText="@string/total_input_paids">
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_total_input_paids_rec"
+                        android:textAlignment="textEnd"
+                        android:hint="@string/money_hint"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+                </LinearLayout>
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/space_min"
+                app:cardElevation="@dimen/card_elevator"
+                app:cardCornerRadius="@dimen/radius_corner"
+                app:strokeWidth="@dimen/stroke_with"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/space_min"
                     android:orientation="vertical">
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="match_parent"
@@ -93,6 +161,9 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/space_min"
+                app:cardElevation="@dimen/card_elevator"
+                app:cardCornerRadius="@dimen/radius_corner"
+                app:strokeWidth="@dimen/stroke_with"
                 android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -184,6 +255,9 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/space_min"
+                app:cardElevation="@dimen/card_elevator"
+                app:cardCornerRadius="@dimen/radius_corner"
+                app:strokeWidth="@dimen/stroke_with"
                 android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -212,35 +286,44 @@
                     android:hint="@string/money_hint"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/green_light_trans"
-                android:layout_margin="@dimen/space_min"
-                android:padding="@dimen/space_min"
-                app:prefixText="@string/total_paids">
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_total_paids_rec"
-                    android:textAlignment="textEnd"
-                    android:hint="@string/money_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/green_light_trans"
-                android:layout_margin="@dimen/space_min"
-                android:padding="@dimen/space_min"
-                app:prefixText="@string/total_input_paids">
-                <com.google.android.material.textview.MaterialTextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_total_input_paids_rec"
-                    android:textAlignment="textEnd"
-                    android:hint="@string/money_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/green_light_trans"
+                    android:layout_margin="@dimen/space_min"
+                    android:padding="@dimen/space_min"
+                    android:layout_weight="1"
+                    app:prefixText="@string/warning_quote_value">
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_warning_credit_card_rec"
+                        android:textAlignment="textEnd"
+                        android:hint="@string/money_hint"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/green_light_trans"
+                    android:layout_margin="@dimen/space_min"
+                    android:layout_weight="1"
+                    android:padding="@dimen/space_min"
+                    app:prefixText="@string/value_spend">
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_limit_credit_card_rec"
+                        android:textAlignment="textEnd"
+                        android:hint="@string/money_hint"/>
+                </com.google.android.material.textfield.TextInputLayout>
+                </LinearLayout>
 
 
         </LinearLayout>
